@@ -145,7 +145,7 @@
         <fieldset>
 
             <legend i18n:translate="label_add_comment">Add comment</legend>
-            <p i18n:translate="description_add_comment">
+            <p tal:content="view/comment_transform_message">
                 You can add a comment by filling out the form below. Plain text
                 formatting.
             </p>
